# wordgame1

./: README.md  main.py  pyproject.toml
game1/html/: index.html  script.js  style.css
