[tool.poetry]
name = "wordgame1"
version = "0.1.0"
description = ""
authors = ["DerrickLukimin <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
autopep8 = "^1.5.7"
pycodestyle = "^2.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
